--- a/public_html/careers.html
+++ b/public_html/careers.html
@@ -1,6 +1,24 @@
 
 <section>
-    <p> We always welcome talented B.Tech and MCA freshers. Interested candidates can forward their resumes to 
-        <b> careers@inspanova.com </b>
+    <h3>Inspanova - Careers</h3>
+    
+    <p>
+        <b>Inspanova</b> is always looking for talented B.Tech and MCA freshers to join its experienced team. Speculative applications are always welcome and can be emailed to careers@inspanova.com. Please send your CV and salary details.
+
+
+    </p>
+    <h3>Current Opening(s)</h3>
+    <p>
+    <h4> Mobile Applications</h4>
+
+    <b>Inspanova</b> is looking for programmers to help develop its mobile applications. 
+    <dl>
+        <dt>
+        Applicants require skills in the following areas</dt>
+        
+        <dd>Java web services.</dd>
+        <dd>Experience of developing applications for Android.</dd>
+        <dd>Experience of developing business applications for mobile devices.</dd>
+    </dl>
     </p>
 </section>
