--- a/public_html/contactus.html
+++ b/public_html/contactus.html
@@ -1,5 +1,8 @@
 
 <section>
-    <p>Email id: info@inspanova.com, inspanova@gmail.com</p>
-    <p>Mobile: +91 9946757430, +91 8086130338</p>
+    
+    <h3>Email</h3>
+    <p>info@inspanova.com, inspanova@gmail.com</p>
+    <h3>Mobile</h3>
+    <p>+91 9946757430, +91 8086130338</p>
 </section>
